<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailEventActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">
        
        <ImageView
            android:id="@+id/imgCoverDetail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/contohcover"/>

        <TextView
            android:id="@+id/tvTitleDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/imgCoverDetail"
            app:layout_constraintStart_toStartOf="@+id/imgCoverDetail"
            app:layout_constraintTop_toBottomOf="@+id/imgCoverDetail"
            tools:text="@string/sample_title" />

        <TextView
            android:id="@+id/tvOwnerDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/tvTitleDetail"
            app:layout_constraintStart_toStartOf="@+id/tvTitleDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDetail"
            tools:text="@string/sample_detail_owner" />

        <TextView
            android:id="@+id/tvSummaryDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/tvOwnerDetail"
            app:layout_constraintStart_toStartOf="@+id/tvOwnerDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvOwnerDetail"
            tools:text="@string/sample_summary" />

        <TextView
            android:id="@+id/tvQuotaDetail"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="@+id/tvSummaryDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvSummaryDetail"
            tools:text="@string/sample_quota" />

        <TextView
            android:id="@+id/tvTimeDetail"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="@+id/tvSummaryDetail"
            app:layout_constraintStart_toEndOf="@+id/tvQuotaDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvSummaryDetail"
            tools:text="@string/sample_time" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvDescDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tvTimeDetail"
            app:layout_constraintStart_toStartOf="@+id/tvQuotaDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvQuotaDetail"
            tools:text="@string/sample_desc" />

        <Button
            android:id="@+id/btnRegisterDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@id/tvDescDetail"
            app:layout_constraintStart_toStartOf="@+id/tvDescDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvDescDetail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>