<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewVertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/contohevent" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@+id/tvSummary"
            card_view:layout_constraintStart_toStartOf="@+id/tvSummary"
            card_view:layout_constraintTop_toTopOf="@+id/imageView"
            tools:text="@string/sample_category" />

        <TextView
            android:id="@+id/tvSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            card_view:layout_constraintEnd_toEndOf="@+id/tvOwner"
            card_view:layout_constraintStart_toStartOf="@+id/tvOwner"
            card_view:layout_constraintTop_toBottomOf="@+id/tvCategory"
            tools:text="@string/sample_summary" />

        <TextView
            android:id="@+id/tvOwner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/owner"
            card_view:layout_constraintBottom_toTopOf="@+id/tvQuota"
            card_view:layout_constraintEnd_toEndOf="@+id/tvQuota"
            card_view:layout_constraintStart_toEndOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvQuota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quota"
            android:textAlignment="textEnd"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toTopOf="@+id/tvTitleEvent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvTitleEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            card_view:layout_constraintEnd_toEndOf="@+id/imageView"
            card_view:layout_constraintStart_toStartOf="@+id/imageView"
            card_view:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="@string/sample_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>